cpp/secret-handshake/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
[ 25%] Building CXX object CMakeFiles/secret-handshake.dir/secret_handshake_test.cpp.o
[ 50%] Building CXX object CMakeFiles/secret-handshake.dir/secret_handshake.cpp.o
[ 75%] Building CXX object CMakeFiles/secret-handshake.dir/test/tests-main.cpp.o
[100%] Linking CXX executable secret-handshake
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
[100%] Built target secret-handshake
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
===============================================================================
All tests passed (11 assertions in 11 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
[100%] Built target test_secret-handshake
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/secret-handshake.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/secret-handshake.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)25008"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
secret_handshake.cpp                          17      16    94%   13
secret_handshake_test.cpp                     33      33   100%   
test/catch.hpp                                48      27    56%   1448-1450,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         98      76    77%
------------------------------------------------------------------------------
lines: 77.6% (76 out of 98)
branches: 41.0% (133 out of 324)

real	0m9.976s
user	0m9.184s
sys	0m0.780s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.157s
user	0m0.116s
sys	0m0.043s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.174s
user	0m0.130s
sys	0m0.046s

===============================================================================

Running: clang-format-16 -style=file -i ./secret_handshake.cpp ./secret_handshake_test.cpp ./secret_handshake.h

real	0m0.021s
user	0m0.011s
sys	0m0.010s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./secret_handshake.cpp ./secret_handshake_test.cpp ./secret_handshake.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/secret_handshake.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/secret_handshake.h.

real	0m0.713s
user	0m0.667s
sys	0m0.045s


real	0m0.714s
user	0m0.668s
sys	0m0.046s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
22976 warnings generated.
60054 warnings generated.
60054 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/secret_handshake.h.
Suppressed 60059 warnings (60054 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m8.631s
user	0m8.559s
sys	0m0.070s
Running: clang-tidy-16 ./secret_handshake.cpp ./secret_handshake_test.cpp ./secret_handshake.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/secret-handshake/secret_handshake.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m8.634s
user	0m8.561s
sys	0m0.073s

===============================================================================

